- add filtering notes by tags & folders -  fix helper for build  folder tree - cover all by tests
